# voj-judger

./: .env.example  Cargo.toml  Dockerfile  a.out  dump.vcd  wave.vcd
.github/workflows/: main.yml
ci/: .drone.yml  Dockerfile
src/: clean.rs  env.rs  fetch_job.rs  fetch_question.rs  fetch_testbench.rs  judge.rs  main.rs  parse.rs  parse_job.rs  return_result.rs  thread_pool.rs  timestamp.rs  worker.rs
src/actors/: master.rs  message.rs  mod.rs  worker.rs  wsclient.rs
src/judge/: judge.rs  mod.rs  parse.rs
