[package]
name = "voj_judger"
version = "0.1.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json","blocking"] }
serde=""
serde_json=""
serde_derive=""
dotenv=""
bson="2.0.0-beta.2"
