[package]
name = "voj_judger"
version = "0.1.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde=""
serde_json=""
serde_derive=""
dotenv=""
bson="2.0.0-beta.2"
actix=""
uuid= { version = "", features = ["v4"] }
tokio={version="",features=["io-util"]}
futures-util=""
futures=""
httparse=""
url=""
tokio-util=""
awc="^3.0.0-beta.7"
actix-codec="0.4.0"
bytes=""
env_logger=""

